gettinglevers After plan selection KEX-676

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
         <a [routerLink]="['/lever-selection']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-th-list"></i>&nbsp;{{ 'Lever Selection' }}
         </a>
-        <a [routerLink]="['/component']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+        <a [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-th-list"></i>&nbsp;{{ 'Component' }}
         </a>
         <div class="nested-menu">
