--- a/src/app/layout/lever-selection/lever-selection.component.html
+++ b/src/app/layout/lever-selection/lever-selection.component.html
@@ -79,7 +79,7 @@
                     </div>
 
 
-                    <div class="form-group">
+                    <!-- <div class="form-group">
                         <label for="noOfEmps2">Number Of Out of State Employees</label>
                         <input onkeypress="return event.charCode >= 48" type="number" min="0" step="1" class="form-control" id="noOfEmps2" aria-describedby="noOfEmps2" placeholder="Number Of Out of State Employees" formControlName="noOfEmps2">
                         <span class="help-block" *ngIf="(leverForm.get('noOfEmps2').touched || 
@@ -90,7 +90,7 @@
                             </span>
 
                         </span>
-                    </div>
+                    </div> -->
 
                     <button type="submit" [disabled]="!leverForm.valid" class="btn btn-primary">Submit</button>
                 </form>
@@ -99,13 +99,33 @@
             <div class="col-sm-4">
                 <div class="form-group" *ngIf="isSubmitted">
                     <label for="typeOfPlan">Available Plans</label>
-                    <select class="form-control" id="availPlan">
-      <option *ngFor="let plan of plans">
+                    <select class="form-control" id="availPlan" [(ngModel)]="selectedPlan" (change)="getResponseForPlan()">
+      <option *ngFor="let plan of plans" [value]="leversResponse.levers.plan.elements[plan].id">
           {{leversResponse.levers.plan.elements[plan].value}}
       </option>
      
     </select>
+
+
+
                 </div>
+
+
+
+
+
+                <section *ngIf="selectedPlan">
+                    <div class="form-group" *ngFor="let lever of updatedFormatOfLevers">
+                        <label for="typeOfPlan">{{lever.name}}</label>
+                        <select class="form-control">
+                            <option>select</option>
+      <option *ngFor="let element of lever.elements" [value]="element.id">
+          {{element.value}}
+      </option>
+    </select>
+                    </div>
+                </section>
+
             </div>
 
 
