--- a/src/app/layout/lever-selection/lever-selection.component.html
+++ b/src/app/layout/lever-selection/lever-selection.component.html
@@ -118,13 +118,39 @@
                     <div class="form-group" *ngFor="let lever of updatedFormatOfLevers">
                         <label for="typeOfPlan">{{lever.name}}</label>
                         <select class="form-control" [(ngModel)]="lever.selectedValue">
-                            <option>select</option>
+                            <option  value="">select</option>
       <option *ngFor="let element of lever.elements" [value]="element.id">
           {{element.value}}
       </option>
     </select>
                     </div>
                 </section>
+
+                <button style="float:right" type="button" (click)="getResponseAfterAllLeversSelected()">GET</button>
+
+                <!-- network level levers -->
+                <section *ngIf="selectedPlan">
+
+
+                    <section *ngFor="let network of networdIds" class="network-panel">
+                        <div class="network-name">{{network}}</div>
+                        <div class="form-group" *ngFor="let lever of updatedFormatOfLeversAfterAllLeversSelected">
+                            <label for="typeOfPlan">{{lever.name}}</label>
+
+                            <select *ngIf="lever.elements.length>1" class="form-control" [(ngModel)]="lever.selectedElement">
+                            <option  value="">select</option>
+      <option *ngFor="let element of lever.elements" [value]="element.id">
+         &nbsp;{{element.value}}%
+      </option>
+    </select>
+                            <span *ngIf="lever.elements.length===1">&nbsp;{{lever.elements[0].value}}%  </span>
+                        </div>
+
+
+                    </section>
+
+                </section>
+
 
             </div>
 
@@ -137,6 +163,3 @@
 
 
 </div>
-
-<input type="button" value="clickkk" (click)="getResponseAfterAllLeversSelected()">
-<hr> {{updatedFormatOfLevers | json}}
