--- a/src/app/layout/lever-selection/lever-selection.component.scss
+++ b/src/app/layout/lever-selection/lever-selection.component.scss
@@ -23,3 +23,10 @@
 .network-panel span {
     color: blue;
 }
+.rats {
+    color: black;
+    font-size: 21px;
+    font-weight: bold;
+    padding: 14px;
+    padding-left: 0;
+}
