--- a/src/app/layout/lever-selection/lever-selection.component.scss
+++ b/src/app/layout/lever-selection/lever-selection.component.scss
@@ -30,3 +30,11 @@
     padding: 14px;
     padding-left: 0;
 }
+
+.network-name span {
+    color: #313131!important;
+    font-weight: normal;
+    position: relative;
+    left: -10px;
+    font-style: italic;
+}
