--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -3,4 +3,4 @@
 <section class="main-container">
     <router-outlet></router-outlet>
 </section>
-<spinner></spinner>
+<spinner [spinner]="spinkit.skDoubleBounce" [backgroundColor]="'#337ab7'"></spinner>
