--- a/src/app/layout/lever-selection/lever-selection.component.html
+++ b/src/app/layout/lever-selection/lever-selection.component.html
@@ -111,7 +111,7 @@
                 <section *ngIf="selectedPlan">
                     <div class="form-group" *ngFor="let lever of updatedFormatOfLevers">
                         <label for="typeOfPlan">{{lever.name}}</label>
-                        <select  class="form-control" [(ngModel)]="lever.selectedValue">
+                        <select class="form-control" [(ngModel)]="lever.selectedValue">
                             <option  value="">select</option>
       <option *ngFor="let element of lever.elements" [value]="element.id">
           {{element.value}}
@@ -121,10 +121,10 @@
 
                     <br>
                     <button style="float:right" type="button" class="btn btn-primary" (click)="getResponseAfterAllLeversSelected()">Get Networks</button>
-    <br> 
-    <br>
+                    <br>
+                    <br>
                 </section>
-               
+
                 <!-- network level levers -->
                 <section *ngIf="showRates">
 
@@ -150,26 +150,26 @@
 
 
 
-<div class="rats">Ratings</div>
-                <!-- Ratings -->
-                <section *ngIf="selectedPlan">
+                    <div class="rats">Ratings</div>
+                    <!-- Ratings -->
+                    <section *ngIf="selectedPlan">
 
 
-                    <section *ngFor="let network of networksList" class="network-panel">
-                        <div class="network-name">{{network}}</div>
-                        <div class="form-group" *ngFor="let rate of rates | filterForRates:network">
-                            <label for="">{{rate.tier}}</label>
+                        <section *ngFor="let network of networksList" class="network-panel">
+                            <div class="network-name">{{network}}</div>
+                            <div class="form-group" *ngFor="let rate of rates | filterForRates:network">
+                                <label for="">{{rate.tier}}</label>
 
 
-                            <span>&nbsp;{{rate.amount}}%  </span>
-                        </div>
+                                <span>&nbsp;{{rate.amount}}  </span>
+                            </div>
 
+
+                        </section>
 
                     </section>
 
                 </section>
-
-            </section>
 
             </div>
 
