--- a/src/app/layout/lever-selection/lever-selection.component.scss
+++ b/src/app/layout/lever-selection/lever-selection.component.scss
@@ -37,6 +37,12 @@
 .network-panel span {
     color: blue;
 }
+.nw{
+    color:rgb(255, 174, 0);
+}
+.bc{
+    color:rgb(255, 0, 255);
+}
 
 .rats {
     color: black;
