--- a/src/app/layout/lever-selection/lever-selection.component.html
+++ b/src/app/layout/lever-selection/lever-selection.component.html
@@ -133,7 +133,7 @@
                         <label for="typeOfPlan"><span class="nw">{{lever.network}}</span>- <span class="bc">{{lever.benefitClass}}</span> -{{lever.name}}</label>
 
                         <select *ngIf="lever.elements.length>1" class="" [(ngModel)]="lever.selectedValue">
-      <option *ngFor="let element of lever.elements" [value]="element">
+      <option *ngFor="let element of lever.elements" [value]="element.value">
           {{element.value}}
       </option>
     </select>
