--- a/src/app/layout/lever-selection/lever-selection.component.html
+++ b/src/app/layout/lever-selection/lever-selection.component.html
@@ -77,6 +77,10 @@
                                 Please enter your zip code name.
                             </span>
 
+                        <span *ngIf="leverForm.get('zipCode').errors.pattern">
+                                Zip Code should contain only numbers and length should be 5
+                            </span>
+
                         </span>
                     </div>
 
@@ -114,7 +118,7 @@
 
                 </form>
             </div>
-            
+
             <div class="col-sm-8">
                 <div class="" *ngIf="showPlans">
                     <label for="typeOfPlan">Available Plans</label>
@@ -125,49 +129,49 @@
      
     </select>
                 </div>
-<br />
+                <br />
 
                 <section *ngIf="selectedPlan">
-                    
-                        
-                        
-                                <div class="" *ngFor="let lever of leversWithoutNetworks">
-                                       
-                                    <label for="typeOfPlan"> {{lever.name}}: </label>
-                                    <span class="nx" *ngIf="lever.elements.length==1" > {{lever.elements[0].value}}</span> 
-                        <section style="display:inline-block"  *ngIf="lever.elements.length!=1" class="vall" >
-                                    <select class="" [(ngModel)]="lever.selectedValue">
+
+
+
+                    <div class="" *ngFor="let lever of leversWithoutNetworks">
+
+                        <label for="typeOfPlan"> {{lever.name}}: </label>
+                        <span class="nx" *ngIf="lever.elements.length==1"> {{lever.elements[0].value}}</span>
+                        <section style="display:inline-block" *ngIf="lever.elements.length!=1" class="vall">
+                            <select class="" [(ngModel)]="lever.selectedValue">
                         <option *ngFor="let element of lever.elements" [ngValue]="element">
                         {{element.value}}
                         </option>
                         </select>
                         </section>
-                                </div>
-                  
-                       
+                    </div>
 
 
 
 
-                    
+
+
+
                     <section *ngFor="let network of networksList" class="network-panel">
                         <div class="network-name">{{network}}</div>
 
-                    <div class="" *ngFor="let lever of response3?.levers | filterForRates:network">
-                          
-                        <label for="typeOfPlan"> <span class="bc">{{lever.benefitClass}}</span> 
+                        <div class="" *ngFor="let lever of response3?.levers | filterForRates:network">
+
+                            <label for="typeOfPlan"> <span class="bc">{{lever.benefitClass}}</span> 
                             <!-- -{{lever.name}} -->
                         </label>
-                        <span class="percnt" *ngIf="lever.elements.length==1" > {{lever.elements[0].value}}%</span> 
-<section style="display:inline-block" id="block" *ngIf="lever.elements.length!=1" class="vall" >
-                        <select class="" [(ngModel)]="lever.selectedValue">
+                            <span class="percnt" *ngIf="lever.elements.length==1"> {{lever.elements[0].value}}%</span>
+                            <section style="display:inline-block" id="block" *ngIf="lever.elements.length!=1" class="vall">
+                                <select class="" [(ngModel)]="lever.selectedValue">
       <option *ngFor="let element of lever.elements" [ngValue]="element">
           {{element.value}}
       </option>
     </select>
-</section>
-                          
-                    </div>
+                            </section>
+
+                        </div>
                     </section>
                     <br>
                     <button style="float:right" type="button" class="btn btn-primary" (click)="getRates()">Get Rates</button>
